start quiz event works but answers and questions do not show up

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     </head>
     <body>
-        <h1 id="timer" class ="time" style="text-align:right;"></h1>
-        <div class = "container">
+        <div id="timer" class ="time"></div>
+        <div class = "container" >
             <div id="question-container" class="hide">
                 <div id="question">Question</div>
                 <div id="answer-buttons" class="btn-grid">
@@ -20,9 +20,13 @@
                     <button class="btn">Answer 4</button>
                 </div>
             </div>
-            <div class="controls">
+             <div id="start-btn"> 
+                <h1>JavaScript Quiz Challenge</h1>
+                <p>Answer the following questions before time runs out!</p>
+             <div class="controls">
                 <button id="start-btn" class="'start btn btn">Start</button>
-            </div>
+             </div>
+         </div>
         </div>
         <script src="./script.js"></script>
     </body>
